{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 21,
  "lineage": "99535f2d-a205-cd97-3411-f78402cb635d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aede31ff78cc1b0c",
            "arn": "arn:aws:ec2:us-east-1:196771543840:elastic-ip/eipalloc-0aede31ff78cc1b0c",
            "domain": "vpc",
            "id": "eipalloc-0aede31ff78cc1b0c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-233-41-32.compute-1.amazonaws.com",
            "public_ip": "18.233.41.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:196771543840:instance/i-0cd24080d033655b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd24080d033655b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2754cf43f580225",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-98-80-249-98.compute-1.amazonaws.com",
            "public_ip": "98.80.249.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048dd982955eb8b59",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeb7131843c096fc",
            "tags": {
              "Name": "terraform-web-server"
            },
            "tags_all": {
              "Name": "terraform-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063134403e5940d12"
            ]
          },
          "dependencies": [
            "aws_security_group.main_security",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196771543840:internet-gateway/igw-0adbd6d272fd9c524",
            "id": "igw-0adbd6d272fd9c524",
            "owner_id": "196771543840",
            "vpc_id": "vpc-012b20bdedbc81177"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aede31ff78cc1b0c",
            "association_id": "eipassoc-0407fc230c5bb0700",
            "connectivity_type": "public",
            "id": "nat-0f67a5899a2c6301d",
            "network_interface_id": "eni-026e812e65ef05be0",
            "private_ip": "10.0.0.163",
            "public_ip": "18.233.41.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eeb7131843c096fc",
            "tags": {
              "Name": "free_tier_igw"
            },
            "tags_all": {
              "Name": "free_tier_igw"
            }
          },
          "dependencies": [
            "aws_eip.main_eip",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196771543840:route-table/rtb-0e4eb6aeb270f46f0",
            "id": "rtb-0e4eb6aeb270f46f0",
            "owner_id": "196771543840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f67a5899a2c6301d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "free_tier_routetable"
            },
            "tags_all": {
              "Name": "free_tier_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b20bdedbc81177"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main_eip",
            "aws_nat_gateway.main_gateway",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c853ad6e2570c672",
            "route_table_id": "rtb-0e4eb6aeb270f46f0",
            "subnet_id": "subnet-0eeb7131843c096fc"
          },
          "dependencies": [
            "aws_eip.main_eip",
            "aws_nat_gateway.main_gateway",
            "aws_route_table.main_route",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196771543840:security-group/sg-063134403e5940d12",
            "description": "Allow SSH AND TH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-063134403e5940d12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "196771543840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b20bdedbc81177"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196771543840:subnet/subnet-0eeb7131843c096fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb7131843c096fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196771543840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "free-tier-igw"
            },
            "tags_all": {
              "Name": "free-tier-igw"
            },
            "vpc_id": "vpc-012b20bdedbc81177"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196771543840:vpc/vpc-012b20bdedbc81177",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be500861bc70fc42",
            "default_route_table_id": "rtb-0044ffdf7c6f22fe1",
            "default_security_group_id": "sg-086bf7328090ff644",
            "dhcp_options_id": "dopt-00641766de197b12e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012b20bdedbc81177",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0044ffdf7c6f22fe1",
            "owner_id": "196771543840",
            "tags": {
              "Name": "free-tier-vpc"
            },
            "tags_all": {
              "Name": "free-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}